--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <table>
             <tbody>
               <tr>
-                <th scope="col"><img src="images/bgfull.png" class="rounded float-start img-fluid" alt="shayan" width="400" height="400"></th>
+                <th scope="col"><img src="images/sbgfull.png" class="rounded float-start img-fluid" alt="shayan" width="400" height="400"></th>
                 <th scope="col"><p class="m-5" style="text-align:left;font-size:20px;font-weight:normal">Greetings,<br><br>I'm Muhammad Shayan Usman. <br><br>BSc. Computer Engineering Student @ Bilkent University</p></th>
               </tr>
             </tbody>
