Added page anchors

--- a/index_new.html
+++ b/index_new.html
@@ -12,12 +12,8 @@
 
     <body>
         <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00A896;">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1c2023;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid" width="50" height="50"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -51,7 +47,7 @@
 
         <!-- content -->
         <div class="m-5">
-          <img src="images/*circle.png" class="img-fluid" width="300" height="300">
+          <img src="images/sbgfull.png" class="img-fluid" width="300" height="300">
           <h1>Hello, world</h1>
         </div>
     </body>
