--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="row">
             <div class="col-l-6">
               <!-- start of education timeline -->
-              <h3>Education</h3>
+              <a id="Education"><h3>Education</h3></a>
               <ul class="timeline">
 
                 <!-- Item 1: Bilkent University - Undergrad -->
@@ -152,7 +152,7 @@
 
         <!-- experimental -->
 
-        <section class="">
+        <!-- <section class="container-fluid"> -->
           <style>
             .timeline-with-icons {
               border-left: 1px solid hsl(0, 0%, 90%);
@@ -245,7 +245,7 @@
               </p>
             </li>
           </ul>
-        </section>
+        <!-- </section> -->
         
         </body>
 </html>
