--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     </head>
 
     <body>
-    <div id="Home"></div>
     <!-- HEADER -->
-        <div class="container-fluid sticky-top" style="background-color:#12161a">
+        <div id="Home" class="container-fluid sticky-top" style="background-color:#12161a">
           <!-- ANCHORS -->
           <ul class="nav justify-content-end">
             <li class="m-2 nav-item">
