Resume button update

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <a class="nav-link" href="#Hobbies">Hobbies</a>
             </li>
             <li class="m-2 nav-item">
-              <a href="https://drive.google.com/file/d/1TwvVov3DzNP4wl1nBXTYlc1pHpKr1hsp/view?usp=sharing" download><button type="button" class="btn btn-outline-warning">Resume</a></button>
+              <a href="https://drive.google.com/file/d/1TwvVov3DzNP4wl1nBXTYlc1pHpKr1hsp/view?usp=sharing" class="btn btn-primary">Resume</a>
             </li>
           </ul>
-      </div>
+        </div>
 
       <!-- breadcrumb -->
       <div class="container">
@@ -46,7 +46,6 @@
           </ol>
         </nav>
       </div>
-
 <!-- END OF HEADER -->
         <!-- BODY -->
 
@@ -55,7 +54,7 @@
           <table>
             <tbody>
               <tr>
-                <th scope="col"><img src="images/sbgfull.png" class="rounded float-start img-fluid" alt="shayan" width="400" height="400"></th>
+                <th scope="col"><img src="images/bgfull.png" class="rounded float-start img-fluid" alt="shayan" width="400" height="400"></th>
                 <th scope="col"><p class="m-5" style="text-align:left;font-size:20px;font-weight:normal">Greetings,<br><br>I'm Muhammad Shayan Usman. <br><br>BSc. Computer Engineering Student @ Bilkent University</p></th>
               </tr>
             </tbody>
@@ -190,5 +189,5 @@
         </div>
 
         <!-- /BODY -->
-      </body>
+    </body>
 </html>
