--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <body>
     <!-- HEADER -->
-        <div id="Home" class="container-fluid sticky-top" style="background-color:#12161a">
+        <div class="container-fluid sticky-top" style="background-color:#12161a">
           <!-- ANCHORS -->
           <ul class="nav justify-content-end">
             <li class="m-2 nav-item">
-              <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="#top">Home</a>
             </li>
             <li class="m-2 nav-item">
               <a class="nav-link active" aria-current="page" href="#Education">Education</a>
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#Hobbies">Hobbies</a>
             </li>
             <li class="m-2 nav-item">
-              <a href="https://drive.google.com/file/d/1TwvVov3DzNP4wl1nBXTYlc1pHpKr1hsp/view?usp=sharing" class="btn btn-primary">Resume</a>
+              <a href="https://drive.google.com/file/d/1TwvVov3DzNP4wl1nBXTYlc1pHpKr1hsp/view?usp=sharing" class="btn btn-warning">Resume</a>
             </li>
           </ul>
         </div>
