--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="single-timeline-content d-flex wow fadeInLeft" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
                                     <div><img src="images/bilkent.png" class="rounded float-left" alt="bilkent" width="75" height="75"></div>
-                                    <div class="timeline-text">
+                                    <div class="m-5 timeline-text">
                                         <h3>Bilkent University</h3>
                                         <p><br>Studying BSc Computer Engineering (CS) - Sophomore<br></p>
                                       </div>
