--- a/index.html
+++ b/index.html
@@ -16,27 +16,28 @@
 
     <body>
     <!-- HEADER -->
-        <div class="container-fluid sticky-top" style="background-color:#12161a">
-          <!-- ANCHORS -->
-          <ul class="nav justify-content-end">
-            <li class="m-2 nav-item">
-              <a class="nav-link active" aria-current="page" href="#top">Home</a>
-            </li>
-            <li class="m-2 nav-item">
-              <a class="nav-link active" aria-current="page" href="#Education">Education</a>
-            </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <ul class="nav justify-content-end">
+        <li class="m-2 nav-item">
+          <a class="nav-link active" aria-current="page" href="#top">Home</a>
+        </li>
+        <li class="m-2 nav-item">
+          <a class="nav-link active" aria-current="page" href="#Education">Education</a>
+        </li>
 
-            <li class="m-2 nav-item">
-              <a class="nav-link" href="#Projects">Projects</a>
-            </li>
-            <li class="m-2 nav-item">
-              <a class="nav-link" href="#Hobbies">Hobbies</a>
-            </li>
-            <li class="m-2 nav-item">
-              <a href="https://drive.google.com/file/d/1TwvVov3DzNP4wl1nBXTYlc1pHpKr1hsp/view?usp=sharing" class="btn btn-warning">Resume</a>
-            </li>
-          </ul>
-        </div>
+        <li class="m-2 nav-item">
+          <a class="nav-link" href="#Projects">Projects</a>
+        </li>
+        <li class="m-2 nav-item">
+          <a class="nav-link" href="#Hobbies">Hobbies</a>
+        </li>
+        <li class="m-2 nav-item">
+          <a href="https://drive.google.com/file/d/1TwvVov3DzNP4wl1nBXTYlc1pHpKr1hsp/view?usp=sharing" class="btn btn-warning">Resume</a>
+        </li>
+      </ul>
+</nav>
+
+
 
       <!-- breadcrumb -->
       <div class="container">
