--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <body>
     <!-- HEADER -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <ul class="nav justify-content-end">
+    <nav class="navbar right navbar-expand-lg navbar-light bg-dark ">
+      <ul class="nav ml-auto justify-content-end">
         <li class="m-2 nav-item">
           <a class="nav-link active" aria-current="page" href="#top">Home</a>
         </li>
