--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
     <!-- HEADER -->
-    <nav class="navbar right navbar-expand-lg navbar-light bg-dark ">
+    <nav class="navbar right navbar-expand-lg navbar-light bg-dark" style="background-color:#12161a">
       <ul class="nav ml-auto justify-content-end">
         <li class="m-2 nav-item">
           <a class="nav-link active" aria-current="page" href="#top">Home</a>
