Renovated website - WIP

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   </tbody>
                </table>
 <!-- APPS -->               
-               <table class="content-table" id="apps_table">
+               <table class="hidden content-table" id="apps_table">
                   <tbody>
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()" >
                         <td class="image-cell">
@@ -197,7 +197,7 @@
                   </tbody>
                </table>
 <!-- PROJECTS -->
-               <table class="hidden content-table" id="proj_table">
+               <table class="content-table" id="proj_table">
                   <tbody>
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()" >
                         <td class="image-cell">
