Renovated website - WIP

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="author" content="Muhammad Shayan Usman">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="stylesheet.css">
-      <link rel="icon" type="image/png" href="images/icon.ico">
+      <link rel="icon" type="image/png" href="assets/images/icon.ico">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Space+Mono&amp;display=swap" rel="stylesheet">
