Renovated website - WIP

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                            <p style="text-align:center">
                               <strong><name>Muhammad Shayan Usman</name></strong>
                               <br><br>
-                              <span><i>The act of applause is an acclamation of the soul</i></span>
+                              <span><i>"The act of applause is an acclamation of the soul"</i>~Aoi Todo</span>
                            </p>
                            <p style="text-align:center">
                               <a class="disabled" href="#">Bio</a> &nbsp;|&nbsp;
@@ -282,11 +282,11 @@
                   </tbody>
                </table>
 <!-- MISC -->
-
                <table class="hidden content-table" id="misc_table">
                   <tbody>
                   </tbody>
                </table>
+               
       </tbody>
       </table>
 
