--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </td>
                         <td style="padding:2.5%;width:58%;vertical-align:middle; padding-left: 5%;">
                            <p>
-                              I am a <strong>3rd-year Computer Science</strong> student at <a href="https://w3.bilkent.edu.tr/bilkent/">Bilkent Üniversitesi</a>. I am interested in machine learning, computer vision, and computer graphics.
+                              I am a <strong>3rd-year Computer Science</strong> student at <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank">Bilkent Üniversitesi</a>. I am interested in machine learning, computer vision, and computer graphics.
                            </p>
                         </td>
                      </tr>
@@ -192,7 +192,7 @@
                   </tbody>
                </table>
 <!-- PROJECTS -->
-               <table class="content-table" id="proj_table">
+               <table class="hidden content-table" id="proj_table">
                   <tbody>
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
                         <td class="image-cell">
@@ -277,26 +277,80 @@
                </table>
 
 <!-- EXP -->
-               <table class="hidden content-table" id="exp_table">
+               <table class="content-table" id="exp_table" style="border-spacing: 0 0;">
                   <tbody>
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
-                        <td class="image-cell">
-                           <div class="image-cell-div">
-                              <a href="https://github.com/SCORPIA2004/CampusConnect" target="_blank">
-                                 <img class="image-table" src="assets/images/CampusConnect.png" width="100%">
-                              </a>   
-                           </div>
+                        <td>
+                           <table class="desc-table">
+                              <tr>
+                                 <td class="desc-cell-secondary" >
+                                    <a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">
+                                       <papertitle>→ Computer Engineering Intern</papertitle>
+                                    </a>
+                                 </td> 
+                                 <td class="desc-cell-secondary">
+                                    <p class="desc-cell-text-small">Jun 2023 - Sep 2023</p>
+
+                                 </td>
+                              </tr>
+                              <tr>
+                                 <td colspan="2">
+                                    <a href="https://www.nanomagnetics-inst.com/" target="_blank">NanoMagnetics Instruments</a>
+                                    <p class="desc-cell-text">• Used Tkinter and numpy to correct plots for Hysteresis Loop data<br>• Created software that obtained and portrayed data for research purposes<br>• Integrating new features into the Vibrating Sample Magnometer (VSM) software</p>
+                                    <p class="desc-cell-text-small">Python | LABView</p>
+                                 </td>
+                              </tr>
+                           </table>
                         </td>
-                        <td class="desc-cell">
-                           <a >
-                              <papertitle>CampusConnect</papertitle>
-                           </a>
-                           <br>
-                           <a href="https://campus-connect-undefined.onrender.com/" target="_blank">web app</a> /
-                           <a href="https://youtu.be/J5G0Qc4Uwq0" target="_blank">video</a> /
-                           <a href="https://github.com/SCORPIA2004/CampusConnect" target="_blank">repo</a>
-                           <p class="desc-cell-text">A social webapp  that helps connect all Bilkent students together. Combines ideas behind websites like Reddit and Letgo and makes them available exclusively for Bilkent Students.</p>
-                           <p class="desc-cell-text-small">MongoDB | ExpressJS | React | NodeJS</p>
+                     </tr>
+
+                     <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
+                        <td>
+                           <table class="desc-table">
+                              <tr>
+                                 <td class="desc-cell-secondary">
+                                    <a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">
+                                       <papertitle>→ SWE Team Lead</papertitle>
+                                    </a>
+                                 </td> 
+                                 <td class="desc-cell-secondary">
+                                    <p class="desc-cell-text-small">Jun 2023 - Sep 2023</p>
+
+                                 </td>
+                              </tr>
+                              <tr>
+                                 <td colspan="2">
+                                    <a href="https://neostellar.net/" target="_blank">NeoStellar</a>
+                                    <p class="desc-cell-text">• Working on UAV flight control system<br>• Creating auto-pilot system for unmanned UAV using OpenCV and NVIDIA Jetson Nano</p>
+                                    <p class="desc-cell-text-small">C | Python | UAV</p>
+                                 </td>
+                              </tr>
+                           </table>
+                        </td>
+                     </tr>
+
+                     <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
+                        <td>
+                           <table class="desc-table">
+                              <tr>
+                                 <td class="desc-cell-secondary">
+                                    <a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">
+                                       <papertitle>→ Game Developer Intern</papertitle>
+                                    </a>
+                                 </td> 
+                                 <td class="desc-cell-secondary">
+                                    <p class="desc-cell-text-small">Jan 2023 - Jun 2023</p>
+
+                                 </td>
+                              </tr>
+                              <tr>
+                                 <td colspan="2">
+                                    <a href="https://neostellar.net/" target="_blank">Harman Games</a>
+                                    <p class="desc-cell-text">• Developing 3D games using Unity Game Engine<br>• Using C# for scripting Game object behaviours</p>
+                                    <p class="desc-cell-text-small"> C# | Unity</p>
+                                 </td>
+                              </tr>
+                           </table>
                         </td>
                      </tr>
 
@@ -307,6 +361,25 @@
 <!-- MISC -->
                <table class="hidden content-table" id="misc_table">
                   <tbody>
+                     <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
+                        <td class="image-cell">
+                           <div class="image-cell-div">
+                              <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">
+                                 <img class="image-table" src="assets/images/hannibal.jpg" width="100%">
+                              </a>   
+                           </div>
+                        </td>
+                        <td class="desc-cell">
+                           <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">
+                              <papertitle>CampusConnect</papertitle>
+                           </a>
+                           <br>
+                           <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">video</a>
+                           <p class="desc-cell-text">This video analyses Hannibal Barca's campaign during the Second Punic War. In collaboration with Ahsan Yousaf.</p>
+                           <p class="desc-cell-text-small">Canva</p>
+                        </td>
+                     </tr>
+
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
                         <td class="image-cell">
                            <div class="image-cell-div">
@@ -346,10 +419,11 @@
                         </td>
                      </tr>
 
+
+                     
                   </tbody>
                </table>
 
-               
 <!-- ACKNOWLEDGMENTS -->
                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                   <tbody>
