--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   </tbody>
                </table>
 <!-- PROJECTS -->
-               <table class="hidden content-table" id="proj_table">
+               <table class="content-table" id="proj_table">
                   <tbody>
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
                         <td class="image-cell">
@@ -277,7 +277,7 @@
                </table>
 
 <!-- EXP -->
-               <table class="content-table" id="exp_table" style="border-spacing: 0 0;">
+               <table class="hidden content-table" id="exp_table" style="border-spacing: 0 0;">
                   <tbody>
                      <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
                         <td>
