--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         </td>
                         <td class="desc-cell">
                            <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">
-                              <papertitle>CampusConnect</papertitle>
+                              <papertitle>Hannibal Barca - The Carthiginian Boogeyman</papertitle>
                            </a>
                            <br>
                            <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">video</a>
