Added splash screen

--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
    <body>
 <!-- SPLASH SCREEN -->
    <div id="splash-screen">
-      <img src="assets/images/icon.ico" alt="Splash Screen">
+      <table>
+         <tr>
+            <td>
+             <p align="center">
+               <img src="assets/images/icon.ico" alt="Splash Screen">
+             </p> 
+            </td>
+         </tr>
+         <tr>
+            <td>
+             <p align="center">
+               &nbsp;
+             </p>
+             <p align="center">
+               <strong><name style="color: #e88d2f;">Muhammad Shayan Usman</name></strong>
+             </p>
+            </td>
+         </tr>
+      </table>
+      
    </div>
 
 
@@ -454,7 +473,7 @@
          setTimeout(function() {
             splashScreen.style.display = 'none';
          }, 800); // this should be the same duration as the fade-out transition
-      }, 1000);
+      }, 1400);
       };
       function let_there_be(something) {
             pubs_table = document.getElementById("pubs_table")
