--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                      <tbody>
                         <tr style="padding:0px">
                            <td id="pp" style="padding:2.5%;width:30%;max-width:40%">
-                           <img id="pp_img" style="width: 100%; height: 100%; border-radius: 15px;" alt="profile photo" src="assets/images/pfp.jpg" class="hoverZoomLink">
+                           <img class="pfp" id="pp_img" alt="profile photo" src="assets/images/pfp.jpg" class="hoverZoomLink">
                            </td>
                            <td style="padding:2.5%;width:58%;vertical-align:middle; padding-left: 3%;">
                               <p>
