--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <tr style="padding:0px">
                            <td class="cell-header">
                               <h1 data-value="MUHAMMAD SHAYAN USMAN">MUHAMMAD SHAYAN USMAN</h1>
-                              <p style="text-align:center">
+                              <p style="text-align:center; font-size: 18px;">
                                  <!-- <strong><name>Muhammad Shayan Usman</name></strong> -->
                                  <!-- <br><br> -->
-                                 <span><i>"The act of applause is an acclamation of the soul"</i><br>~ Aoi Todo</span>
+                                 <span><i>"The act of applause is an acclamation of the soul"</i>~ Aoi Todo</span>
                               </p>
                               <!-- <p style="text-align:center"><a class="disabled" href="#">Bio</a>&nbsp;|&nbsp;<a href="mailto:mshayanalwaha@gmail.com">Email</a>&nbsp;|&nbsp;<a href="https://docs.google.com/document/d/1p9cThLEWSdVM1pfoJ0fYriDcyYJp91SF_DuYkOeY4Us/edit?usp=sharing" target="_blank">CV</a>&nbsp;|&nbsp;<a href="https://github.com/SCORPIA2004" target="_blank">Github</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">LinkedIn</a>&nbsp;|&nbsp;<a href="https://www.instagram.com/scorpia2004/" target="_blank">Instagram</a>&nbsp;|&nbsp;<a href="https://medium.com/@mshayanalwaha" target="_blank">Medium</a></p> -->
                               <p style="text-align:center"><a href="mailto:mshayanalwaha@gmail.com">Email</a>&nbsp;|&nbsp;<a href="https://docs.google.com/document/d/1p9cThLEWSdVM1pfoJ0fYriDcyYJp91SF_DuYkOeY4Us/edit?usp=sharing" target="_blank">CV</a>&nbsp;|&nbsp;<a href="https://github.com/SCORPIA2004" target="_blank">Github</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">LinkedIn</a>&nbsp;|&nbsp;<a href="https://medium.com/@mshayanalwaha" target="_blank">Medium</a></p>
