--- a/index.html
+++ b/index.html
@@ -341,6 +341,24 @@
                         <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
                            <td class="image-cell">
                               
+                                 <a href="https://www.figma.com/file/R8BZfCFKQJQwLtaQgkhAHL/Undefined?type=design&node-id=107%3A2&mode=design&t=aNN8YGzyDwz2Z1lV-1" target="_blank">
+                                    <img class="image-table" src="assets/images/figma.png" height="100%">
+                                 </a>   
+                           </td>
+                           <td class="desc-cell">
+                              <a href="https://www.figma.com/file/R8BZfCFKQJQwLtaQgkhAHL/Undefined?type=design&node-id=107%3A2&mode=design&t=aNN8YGzyDwz2Z1lV-1" target="_blank">
+                                 <papertitle>Webapp Design on Figma</papertitle>
+                              </a>
+                              <br>
+                              <a href="https://www.figma.com/file/R8BZfCFKQJQwLtaQgkhAHL/Undefined?type=design&node-id=107%3A2&mode=design&t=aNN8YGzyDwz2Z1lV-1" target="_blank">Design</a>
+                              <p class="desc-cell-text">This is a concept design I made for a market webapp</p>
+                              <p class="desc-cell-text-small">Figma</p>
+                           </td>
+                        </tr>
+
+                        <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
+                           <td class="image-cell">
+                              
                                  <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">
                                     <img class="image-table" src="assets/images/hannibal.jpg" width="100%">
                                  </a>   
