--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                            <td style="padding: 3%;padding-left: 3%;padding-right: 3%;width:100%;vertical-align:middle;margin-bottom: 0; text-align: center;">
                               <heading class="navbar-heading hidden" style="margin-right: 16px;"><a class="navbar-links" onclick="let_there_be('research')">Research</a></heading> &nbsp;&nbsp;
                               <heading class="navbar-heading"><a class="navbar-links active" id="navbar_projects" onclick="let_there_be('projects')">Projects</a></heading> &nbsp;&nbsp;
-                              <heading class="navbar-heading"><a class="navbar-links" id="navbar_games" onclick="let_there_be('games')">Games</a></heading> &nbsp;&nbsp;
                               <heading class="navbar-heading"><a class="navbar-links" id="navbar_exp" onclick="let_there_be('exp')">Experience</a></heading> &nbsp;&nbsp;
+                              <heading class="navbar-heading"><a class="navbar-links" id="navbar_games" onclick="let_there_be('games')">Games</a></heading> &nbsp;&nbsp;
                               <heading class="navbar-heading"><a class="navbar-links" id="navbar_misc" onclick="let_there_be('misc')">Misc</a></heading> &nbsp;&nbsp;
                            </td>
                         </tr>
@@ -209,7 +209,7 @@
                               <br>
                               <a href="https://github.com/SCORPIA2004/AvASys-Ground-Control-System" target="_blank">repo</a> /
                               <a href="https://youtu.be/OwSjItP4YZ8" target="_blank">video</a>
-                              <p class="desc-cell-text">Flight controller - uses AdaFruit Ultimate GPS + Arduino</p>
+                              <p class="desc-cell-text">Flight controller for controlling UAVs <br> Using AdaFruit Ultimate GPS + Arduino</p>
                               <p class="desc-cell-text-small">Python | Pyside6 | QtDesigner</p>
                            </td>
                         </tr>
@@ -262,11 +262,36 @@
                                  <tr>
                                     <td class="desc-cell-secondary" >
                                        <a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">
+                                          <papertitle>→ Part-time Software Developer</papertitle>
+                                       </a>
+                                    </td> 
+                                    <td class="desc-cell-secondary">
+                                       <p class="desc-cell-text-small">Jan 2024 - Present</p>
+
+                                    </td>
+                                 </tr>
+                                 <tr>
+                                    <td colspan="2">
+                                       <a href="https://www.nanomagnetics-inst.com/" target="_blank">Dill</a>
+                                       <p class="desc-cell-text">• Using React Native and Firebase to create web apps for restaurant management systems</p>
+                                       <p class="desc-cell-text-small">React Native | Firebase | NodeJS</p>
+                                    </td>
+                                 </tr>
+                              </table>
+                           </td>
+                        </tr>
+
+                        <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
+                           <td>
+                              <table class="desc-table">
+                                 <tr>
+                                    <td class="desc-cell-secondary" >
+                                       <a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">
                                           <papertitle>→ Computer Engineering Intern</papertitle>
                                        </a>
                                     </td> 
                                     <td class="desc-cell-secondary">
-                                       <p class="desc-cell-text-small">Jun 2023 - Sep 2023</p>
+                                       <p class="desc-cell-text-small">Jun - Sep 2023</p>
 
                                     </td>
                                  </tr>
@@ -291,7 +316,7 @@
                                        </a>
                                     </td> 
                                     <td class="desc-cell-secondary">
-                                       <p class="desc-cell-text-small">Jun 2023 - Sep 2023</p>
+                                       <p class="desc-cell-text-small">Jun - Sep 2023</p>
 
                                     </td>
                                  </tr>
@@ -316,7 +341,7 @@
                                        </a>
                                     </td> 
                                     <td class="desc-cell-secondary">
-                                       <p class="desc-cell-text-small">Jan 2023 - Jun 2023</p>
+                                       <p class="desc-cell-text-small">Jan - Jun 2023</p>
 
                                     </td>
                                  </tr>
@@ -370,7 +395,7 @@
                               <br>
                               <a href="https://youtu.be/7BfgtNm4sqc" target="_blank">video</a>
                               <p class="desc-cell-text">This video analyses Hannibal Barca's campaign during the Second Punic War. In collaboration with Ahsan Yousaf.</p>
-                              <p class="desc-cell-text-small">Canva</p>
+                              <p class="desc-cell-text-small">Canva | Adobe premiere pro</p>
                            </td>
                         </tr>
 
@@ -407,7 +432,7 @@
                               <br>
                               <a href="https://finance-s4.herokuapp.com/" target="_blank">web</a>
                               <p class="desc-cell-text">Finance app created with JavaScript + Jinja during CS50x.</p>
-                              <p class="desc-cell-text-small">JavaScript | Jinja</p>
+                              <p class="desc-cell-text-small">JavaScript | Jinja | Flask</p>
                            </td>
                         </tr>                       
                      </tbody>
