--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                  </tr>
                                  <tr>
                                     <td colspan="2">
-                                       <a href="https://www.nanomagnetics-inst.com/" target="_blank">Dill</a>
+                                       <a href="https://dillsuite.com/" target="_blank">Dill</a>
                                        <p class="desc-cell-text">• Using React Native and Firebase to create web apps for restaurant management systems</p>
                                        <p class="desc-cell-text-small">React Native | Firebase | NodeJS</p>
                                     </td>
