--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                        </a>
                                     </td> 
                                     <td class="desc-cell-secondary">
-                                       <p class="desc-cell-text-small">Jan 2024 - Present</p>
+                                       <p class="desc-cell-text-small">Jan 2024 - Feb 2024</p>
 
                                     </td>
                                  </tr>
