--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                               <p style="text-align:center">
                                  <a href="mailto:mshayanalwaha@gmail.com">Email</a>&nbsp;|&nbsp;
                                  <a href="https://docs.google.com/document/d/1p9cThLEWSdVM1pfoJ0fYriDcyYJp91SF_DuYkOeY4Us/edit?usp=sharing" target="_blank">CV</a>&nbsp;|&nbsp;
-                                 <a href="resume.pdf" download="resume.pdf">Download CV</a>&nbsp;|&nbsp;
+<!--                                  <a href="resume.pdf" download="resume.pdf">Download CV</a>&nbsp;|&nbsp; -->
                                  <a href="https://github.com/SCORPIA2004" target="_blank">Github</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/muhammed-shayan-usman/" target="_blank">LinkedIn</a>&nbsp;|&nbsp;
                                  <a href="https://medium.com/@mshayanalwaha" target="_blank">Medium</a></p>
                            </td>
